--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
 
         <div class="search-container">
             <form asp-controller="Filme" asp-action="Search">
-                <input type="text" placeholder="Search.." name="SearchString">
+                <input name="buton_search" type="text" placeholder="Search.." name="SearchString">
                 <button type="submit" value="Filter"><i class="fa fa-search"></i></button>
             </form>
         </div>
