--- a/Views/Utilizatori/Delete.cshtml
+++ b/Views/Utilizatori/Delete.cshtml
@@ -63,7 +63,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id_utilizator" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input name="delete_btn" type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
