--- a/Views/Recenzii/Create.cshtml
+++ b/Views/Recenzii/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input name="create_recenzie" type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
