--- a/Views/Utilizatori/SignIn.cshtml
+++ b/Views/Utilizatori/SignIn.cshtml
@@ -36,7 +36,7 @@
             </div>
            
             <div class="create" style="margin: 30px 10px 30px 10px; ">
-                <input type="submit" value="SignIn" class="btn btn-primary" />
+                <input type="submit" value="SignIn" class="btn btn-primary" id="SignIn" />
             </div>
         </form>
     </div>
