New tests added (Miha)

--- a/Views/Quizuri/Test4.cshtml
+++ b/Views/Quizuri/Test4.cshtml
@@ -34,14 +34,14 @@
         <div class="question">
             <br>
             <p>Personajul principal este jucat de:</p>
-            <input type="radio" id="Mircea Diaconu" name="question3" value="Marin Moraru">
+            <input type="radio" id="Marin Moraru" name="question3" value="Marin Moraru">
             <label for="Marin Moraru">Marin Moraru</label><br>
 
             <input type="radio" id="Mircea Diaconu" name="question3" value="Mircea Diaconu">
             <label for="Mircea Diaconu">Mircea Diaconu</label><br><br>
         </div>
 
-        <input type="submit" value="Trimite Răspunsuri">
+        <input id="submit" type="submit" value="Trimite Răspunsuri">
     </form>
 
 
