--- a/Views/Utilizatori/Profile.cshtml
+++ b/Views/Utilizatori/Profile.cshtml
@@ -106,9 +106,9 @@
                     @foreach (var item in Model.Utilizatori)
                     {
                         <tr>
-                            <td>@i</td>
-                            <td>@item.nume</td>
-                            <td>@item.scor</td>
+                            <td id="tabel_number">@i</td>
+                            <td id="tabel_nume">@item.nume</td>
+                            <td id="tabel_scor">@item.scor</td>
                         </tr>
                         i++;
                     }
